2003-05-14  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccserver.h: only have minimal includes here.
	* child.c: add includes.
	* dccserver.c: add includes.

	* child.c (fdgets, findnl, read_some, tell_client, write_complete): move from here...
	* lib/io.c (fdgets, findnl, read_some, tell_client, write_complete): ... to here.

	* Makefile.am (AM_CPPFLAGS): look for header files in lib/.

	* lib/Makefile.am (libcompat_a_SOURCES): add io.c and util.c.

	* child.c (strip_path): move from here...
	* lib/util.c: ... to here.
	* lib/util.h: new file.

	* child.c (data_available): move from here...
	* lib/io.c: ... to here.
	* lib/io.h: new file.

2003-05-13  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* lib/getaddrinfo.c (getaddrinfo): use unsigned short instead of
	less portable u_short.

	* child.c (display_remote_line): fix signedness warnings from
	Tru64.

	* configure.ac: fix getaddrinfo test for Tru64.

2003-05-12  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* README.Darwin: removed, unneeded now.

	* compile: needed for dccsend_CPPFLAGS.

	* configure.ac: use #-comments instead of dnl. Looks nicer.

	* COPYING: add copyright for lib/poll.[ch].

	* configure.ac, Makefile.am, lib/: moved replacement functions to
	lib/ subdir, added poll replacement function from Brian M Clapper
	for building on Darwin.
	
	* dccserver.mdoc: document "close" command.
	* dccserver.man: regen.

	* dccserver.c: add sigint variable.
	(sig_handle): handle SIGINT.
	(handle_input): add "close" command, which closes particular
	client connections (by killing the child).
	(main): install signal handler for SIGINT.
	(main): exit gracefully on SIGINT.
	(main): mention port to which client is connected.

	* dccserver.h: add sigint variable.

	* child.c (cleanup_read_file): fix return value.
	(get_line_from_client): fix return value.
	(child_loop): exit gracefully on SIGINT.

2003-05-11  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* configure.ac: 0.3b test release.
